[gd_scene load_steps=24 format=3 uid="uid://c3cyyo2gkhaqq"]

[ext_resource type="Script" path="res://main.gd" id="1_ooqqt"]
[ext_resource type="PackedScene" uid="uid://dudph7sk1dggs" path="res://board.tscn" id="1_xmi4d"]
[ext_resource type="Texture2D" uid="uid://c4bmpfrx00aiw" path="res://Fairy Pics/wallpaper.png" id="2_7pv6j"]
[ext_resource type="PackedScene" uid="uid://dkxiywhpo54ww" path="res://CardList.tscn" id="5_ao4k1"]
[ext_resource type="PackedScene" uid="uid://0ux41700ls1o" path="res://ButtonText.tscn" id="6_b04lu"]
[ext_resource type="Texture2D" uid="uid://dc13766imjok1" path="res://Fairy Pics/info.png" id="7_rnxi8"]
[ext_resource type="Script" path="res://ConfirmButton.gd" id="8_7wj3o"]
[ext_resource type="Texture2D" uid="uid://o8pfgrunda8u" path="res://Fairy Pics/hints.png" id="8_167hf"]
[ext_resource type="Texture2D" uid="uid://m8qg12s2v7hg" path="res://Fairy Pics/hints_down.png" id="9_kij6r"]
[ext_resource type="Texture2D" uid="uid://b6g1l3guhc6dp" path="res://Fairy Pics/logs.png" id="10_xrj55"]
[ext_resource type="Texture2D" uid="uid://cy2gahi12th8c" path="res://Fairy Pics/logs_down.png" id="11_apprk"]
[ext_resource type="Texture2D" uid="uid://bfaxcv4gfgoxr" path="res://Fairy Pics/settings.png" id="12_2prkk"]
[ext_resource type="Texture2D" uid="uid://x4fe2kgg2hx3" path="res://Fairy Pics/settings_down.png" id="13_5wkok"]
[ext_resource type="PackedScene" uid="uid://c63li1egl8ecb" path="res://Player_Banner.tscn" id="14_2y4se"]
[ext_resource type="PackedScene" uid="uid://dtnb2wl2t0pfa" path="res://player_banner_red.tscn" id="15_amsr3"]
[ext_resource type="PackedScene" uid="uid://dw1i771sno11i" path="res://banner_controller.tscn" id="15_twjjj"]
[ext_resource type="PackedScene" uid="uid://djqrwm4txbxnh" path="res://player_2_card_interaction_popup.tscn" id="16_jxp60"]
[ext_resource type="PackedScene" uid="uid://diygr5u4sxne3" path="res://message_controller.tscn" id="17_miahb"]
[ext_resource type="Script" path="res://Card_Animation_Controller.gd" id="17_wowms"]
[ext_resource type="PackedScene" uid="uid://bkhe3m1kioii0" path="res://token.tscn" id="18_d66wb"]
[ext_resource type="Texture2D" uid="uid://cxldofsyrku4j" path="res://Fairy Pics/tier1CardBack.png" id="19_fcabm"]
[ext_resource type="PackedScene" uid="uid://drtpxaydwef5n" path="res://card_base.tscn" id="20_ema58"]
[ext_resource type="PackedScene" uid="uid://bmutapjdu2e6u" path="res://popup_window.tscn" id="23_lbcph"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ooqqt")
metadata/_edit_horizontal_guides_ = [-19.0]

[node name="Wallpaper" type="Sprite2D" parent="."]
position = Vector2(576, 315.5)
scale = Vector2(1.16939, 1.306)
texture = ExtResource("2_7pv6j")

[node name="Player_Banner" parent="." instance=ExtResource("14_2y4se")]
position = Vector2(18, 1)
scale = Vector2(0.545, 0.545)

[node name="Player_Banner2" parent="." instance=ExtResource("15_amsr3")]
position = Vector2(320, -43)
scale = Vector2(0.545, 0.545)

[node name="Board" parent="." instance=ExtResource("1_xmi4d")]
position = Vector2(726, 225)
scale = Vector2(0.21, 0.21)

[node name="Card_pile" parent="." instance=ExtResource("5_ao4k1")]
offset_left = 0.0
offset_top = 216.0
offset_right = 2470.0
offset_bottom = 1724.0
scale = Vector2(0.29, 0.29)

[node name="ConfirmButton" parent="." instance=ExtResource("6_b04lu")]
position = Vector2(773, 168)
scale = Vector2(0.27, 0.27)
script = ExtResource("8_7wj3o")

[node name="Button_Text" parent="ConfirmButton" index="1"]
text = "Confirm"

[node name="CancelButton" parent="." instance=ExtResource("6_b04lu")]
position = Vector2(933, 167)
scale = Vector2(0.27, 0.27)

[node name="Button_Text" parent="CancelButton" index="1"]
text = "Cancel"

[node name="PhaseIndicator" type="Sprite2D" parent="."]
position = Vector2(941, 138)
scale = Vector2(0.292083, 0.1825)
texture = ExtResource("7_rnxi8")

[node name="Button_Bar" type="VBoxContainer" parent="."]
offset_left = 1111.0
offset_top = 104.0
offset_right = 1324.0
offset_bottom = 758.0
scale = Vector2(0.195, 0.195)

[node name="TextureButton3" type="TextureButton" parent="Button_Bar"]
layout_mode = 2
texture_normal = ExtResource("12_2prkk")
texture_pressed = ExtResource("13_5wkok")

[node name="TextureButton2" type="TextureButton" parent="Button_Bar"]
layout_mode = 2
texture_normal = ExtResource("10_xrj55")
texture_pressed = ExtResource("11_apprk")

[node name="TextureButton" type="TextureButton" parent="Button_Bar"]
layout_mode = 2
texture_normal = ExtResource("8_167hf")
texture_pressed = ExtResource("9_kij6r")

[node name="Player2_Card_Interaction_Popup" parent="." instance=ExtResource("16_jxp60")]
visible = false
position = Vector2(-352, 564)

[node name="Banner_Controller" parent="." instance=ExtResource("15_twjjj")]
offset_left = 104.0
offset_top = 6.0
offset_right = 144.0
offset_bottom = 46.0
scale = Vector2(0.885, 0.885)

[node name="Card_Animation_Controller" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 101.0
offset_bottom = 105.0
mouse_filter = 2
script = ExtResource("17_wowms")

[node name="Move_Token" parent="Card_Animation_Controller" instance=ExtResource("18_d66wb")]
position = Vector2(583, 680)
scale = Vector2(0.215, 0.215)

[node name="Move_Tier" type="Sprite2D" parent="Card_Animation_Controller"]
position = Vector2(498, 712)
scale = Vector2(0.145, 0.145)
texture = ExtResource("19_fcabm")

[node name="Move_Card" parent="Card_Animation_Controller" instance=ExtResource("20_ema58")]
position = Vector2(685, 643)
scale = Vector2(0.145, 0.145)

[node name="Popup_Controller" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Card_Popup" parent="Popup_Controller" instance=ExtResource("23_lbcph")]
visible = false
position = Vector2(-40, 229)
scale = Vector2(0.535, 0.535)

[node name="Message_Controller" parent="." instance=ExtResource("17_miahb")]
offset_left = 41.0
offset_top = 514.0
offset_right = 824.0
offset_bottom = 554.0

[editable path="ConfirmButton"]
[editable path="CancelButton"]
